# AgentGate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  release.yml  security.yml
crates/agentgate-approval/: Cargo.toml
crates/agentgate-approval/src/: lib.rs
crates/agentgate-audit/: Cargo.toml
crates/agentgate-audit/src/: lib.rs
crates/agentgate-cli/: Cargo.toml
crates/agentgate-cli/src/: lib.rs  main.rs
crates/agentgate-cli/tests/: redteam_corpus.rs  v1_cli.rs
crates/agentgate-core/: Cargo.toml
crates/agentgate-core/benches/: canonical_action.rs
crates/agentgate-core/src/: lib.rs
crates/agentgate-integrity/: Cargo.toml
crates/agentgate-integrity/src/: lib.rs
crates/agentgate-policy/: Cargo.toml
crates/agentgate-policy/src/: lib.rs
crates/agentgate-protocol/: Cargo.toml
crates/agentgate-protocol/src/: lib.rs
crates/agentgate-provenance/: Cargo.toml
crates/agentgate-provenance/src/: lib.rs
crates/agentgate-testkit/: Cargo.toml
crates/agentgate-testkit/src/: lib.rs
docs/: DEMO.md  IMPLEMENTATION_PLAN.md  INCIDENT_RESPONSE.md  MIGRATION_V1.md  POLICY_MODEL.md  PRD.md  README.md  RELEASE_V1.md  SPECIFICATION.md  SUPPORTED_VERSIONS.md  TECHNICAL_DESIGN.md  TECHNICAL_PLAN.md  TECHNICAL_REQUIREMENTS.md  TEST_STRATEGY.md  THREAT_MODEL.md  TRACEABILITY.md  USER_GUIDE.md
docs/adr/: 0001-local-protocol-aware-proxy.md  0002-rust-enforcement-core.md  0003-typed-declarative-policy.md  0004-conservative-information-flow.md  0005-exact-action-human-approval.md  0006-metadata-first-signed-audit.md  0007-deterministic-security-decisions.md  0008-stdio-first-transport.md  0009-red-team-corpus-as-product.md  0010-stable-v1-policy.md  0011-authenticated-lineage.md  0012-detached-audit-anchors.md  README.md
examples/policies/: mac_messages_mcp.tests.yaml  mac_messages_mcp.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: jsonrpc_frame.rs  policy_yaml.rs  tool_descriptor.rs
redteam/: README.md  cases.yaml
redteam/policies/: lab.yaml
schemas/: audit-event-v1.schema.json  detached-anchor-v1.schema.json  lineage-v1.schema.json  policy-v1.schema.json  policy-v1alpha1.schema.json  redteam-corpus-v1.schema.json
scripts/: check_docs.py
