[workspace]
resolver = "2"
members = [
  "crates/agentgate-audit",
  "crates/agentgate-approval",
  "crates/agentgate-cli",
  "crates/agentgate-core",
  "crates/agentgate-integrity",
  "crates/agentgate-policy",
  "crates/agentgate-protocol",
  "crates/agentgate-provenance",
  "crates/agentgate-testkit",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
authors = ["Carter LaSalle"]
license = "Apache-2.0"
repository = "https://github.com/carterlasalle/AgentGate"
homepage = "https://github.com/carterlasalle/AgentGate"
keywords = ["mcp", "security", "ai-agents", "policy", "json-rpc"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
hex = "0.4"
hmac = "0.12"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml_ng = "0.10"
sha2 = "0.10"
subtle = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
doc_markdown = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
needless_raw_string_hashes = "allow"
needless_pass_by_value = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
overflow-checks = true
panic = "abort"

[profile.dev]
overflow-checks = true
