[package]
name = "agentgate-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
agentgate-integrity = { path = "../crates/agentgate-integrity" }
agentgate-policy = { path = "../crates/agentgate-policy" }
agentgate-protocol = { path = "../crates/agentgate-protocol" }
libfuzzer-sys = "0.4"
serde_json = "1"

[[bin]]
name = "jsonrpc_frame"
path = "fuzz_targets/jsonrpc_frame.rs"
test = false
doc = false
bench = false

[[bin]]
name = "policy_yaml"
path = "fuzz_targets/policy_yaml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tool_descriptor"
path = "fuzz_targets/tool_descriptor.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
