[package]
name = "agentgate-approval"
description = "Exact-action human approval binding for AgentGate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentgate-core = { version = "1.0.0", path = "../agentgate-core" }
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
