[package]
name = "agentgate-audit"
description = "Tamper-evident metadata-first audit logs for AgentGate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentgate-core = { version = "1.0.0", path = "../agentgate-core" }
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
