[package]
name = "agentgate"
description = "Local security gateway for AI agents and MCP tool servers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
default-run = "agentgate"

[[bin]]
name = "agentgate"
path = "src/main.rs"

[dependencies]
agentgate-approval = { version = "0.1.0", path = "../agentgate-approval" }
agentgate-audit = { version = "0.1.0", path = "../agentgate-audit" }
agentgate-core = { version = "0.1.0", path = "../agentgate-core" }
agentgate-integrity = { version = "0.1.0", path = "../agentgate-integrity" }
agentgate-policy = { version = "0.1.0", path = "../agentgate-policy" }
agentgate-protocol = { version = "0.1.0", path = "../agentgate-protocol" }
agentgate-provenance = { version = "0.1.0", path = "../agentgate-provenance" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
agentgate-testkit = { version = "0.1.0", path = "../agentgate-testkit" }
serde_yaml_ng.workspace = true
tempfile.workspace = true

[lints]
workspace = true
