[package]
name = "agentgate-core"
description = "Security domain types and canonical actions for AgentGate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true

[[bench]]
name = "canonical_action"
harness = false
