[package]
name = "agentgate-policy"
description = "Deterministic typed policy compiler and evaluator for AgentGate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentgate-core = { path = "../agentgate-core" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
