[package]
name = "agentgate-protocol"
description = "Bounded JSON-RPC and MCP protocol handling for AgentGate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
