[package]
name = "agentgate-provenance"
description = "Sensitive-data provenance and information-flow evidence for AgentGate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentgate-core = { version = "1.0.0", path = "../agentgate-core" }
hex.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true

[lints]
workspace = true
