[package]
name = "agentgate-testkit"
description = "Deterministic fake hosts, MCP servers, and security assertions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentgate-core = { path = "../agentgate-core" }
agentgate-protocol = { path = "../agentgate-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
